--- a/types.html
+++ b/types.html
@@ -60,7 +60,7 @@ body {
         <div class="gallery">
             <div class="column">
 
-            <a target="_blank" href="./exercises.html">
+            <a target="_blank" href="./bro split.html">
               <img src="./Bro-Split-Workout.jpg" alt="bro split" width="600" height="400">
             </a>
             <div class="desc">Bro-Split workout</div>
