--- a/back.html
+++ b/back.html
@@ -39,7 +39,7 @@ body {
     height:100vh;
     background-size: cover;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("wallpaper.png");
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("3d-gym-equipment_23-2151114218.avif");
 }
 
 
@@ -76,7 +76,7 @@ body {
         </div>
           </div>
 
-          <br clear="all"/>
+          
           
           <div class="gallery">
             <a target="_blank" href="./wide pull b.webp">
@@ -84,6 +84,8 @@ body {
             </a>
             <div class="desc">تستهدف العضلة الظهرية العريضة والعضلة المدورة الكبيرة وعضلة البايسبس والعضلة العضدية</div>
           </div>
+
+          <br clear="all"/>
 
           <div class="gallery">
             <a target="_blank" href="./تمديد-القطنية-على-الجهاز-Back-Extensions-1-1024x630.webp">
