--- a/types.html
+++ b/types.html
@@ -63,7 +63,9 @@ body {
             <a target="_blank" href="./bro split.html">
               <img src="./Bro-Split-Workout.jpg" alt="bro split" width="600" height="400">
             </a>
-            <div class="desc">Bro-Split workout</div>
+            <div class="desc"><h3>Bro-Split workout</h3>
+
+            </div>
           </div>
           </div>
         
@@ -73,7 +75,9 @@ body {
             <a target="_blank" href="./push pull legs.html">
               <img src="./push pull legs.jpg" alt="push pull legs" width="600" height="400" >
             </a>
-            <div class="desc">Push Pull Legs workout</div>
+            <div class="desc"><h3>Push Pull Legs workout</h3>
+
+            </div>
           </div>
           </div>
           
@@ -83,7 +87,9 @@ body {
             <a target="_blank" href="./upper lower.html">
               <img src="./upper lower.png" alt="upper lower" width="600" height="400">
             </a>
-            <div class="desc">Upper Lower workout</div>
+            <div class="desc"><h3>Upper Lower workout</h3>
+
+            </div>
           </div>
           </div>
           <div class="gallery">
@@ -91,7 +97,9 @@ body {
             <a target="_blank" href="./full body.html">
               <img src="./full-body-built-workout.jpg" alt="abs" width="600" height="400">
             </a>
-            <div class="desc">Fullbody workout</div>
+            <div class="desc"><h3>Fullbody workout</h3>
+
+            </div>
           </div>
           </div>
           </div>
