--- a/push pull legs.html
+++ b/push pull legs.html
@@ -48,7 +48,7 @@ body {
     height:100vh;
     background-size: cover;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("equipment.jpg");
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("3237fd4f30eb41db60a10d8088440e0e.jpg");
 }
 
 
@@ -61,7 +61,7 @@ body {
             <div class="column">
 
             <a target="_blank" href="./push.html">
-              <img src="./built-by-science-article-graphics-chest-1-700xh.jpg" alt="chest" width="600" height="400">
+              <img src="./push .jpg" alt="chest" width="600" height="400">
             </a>
             <div class="desc"><h3>Day One : Push</h3></div>
            
@@ -74,7 +74,7 @@ body {
           <div class="gallery">
             <div class="column">
             <a target="_blank" href="./pull.html">
-              <img src="built-by-science-article-graphics-back-1-700xh.jpg" alt="back" width="600" height="400">
+              <img src="./pull .jpg" alt="back" width="600" height="400">
             </a>
             <div class="desc"><h3>Day Two : Pull</h3></div>
           </div>
@@ -85,7 +85,7 @@ body {
           <div class="gallery">
             <div class="column">
             <a target="_blank" href="./legs3.html">
-              <img src="built-by-science-article-graphics-shoulders-1-700xh.jpg" alt="shoulders" width="600" height="400">
+              <img src="./legs program.jpg" alt="shoulders" width="600" height="400">
             </a>
             <div class="desc"><h3>Day Three : Legs</h3></div>
           </div>
