--- a/chest.html
+++ b/chest.html
@@ -71,7 +71,7 @@ body {
             <a target="_blank" href="./download.jpg">
               <img src="./download.jpg" alt="chest" width="600" height="400">
             </a>
-            <div class="desc"><h3>Flat dumbbell press</h3>
+            <div class="desc"><h3>Flat bar press</h3>
               
             يستهدف باقي العضلة الصدرية الكبرى والصغرى و الكتف الامامية والعضلة المنشارية الامامية والعضلة الغرابية العضدية</div>
           </div>
