--- a/lower.html
+++ b/lower.html
@@ -37,7 +37,7 @@ body {
     font-family: sans-serif;
     width:100%;
     height:100vh;
-    background-size: cover;
+    background-size: auto;
     background-position: center;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("c9508552559a7c54b8b8d28f542ce251.jpg");
 }
@@ -118,7 +118,7 @@ body {
               <img src="./calf.webp" alt="Leg" width="600" height="400">
             </a>
             <div class="desc"><h3>Calf muscle</h3>
-    يسنهدف عضلة السمانه
+    يستهدف عضلة السمانه
 
             </div>
           </div>
