--- a/upper.html
+++ b/upper.html
@@ -40,7 +40,7 @@ body {
     font-family: sans-serif;
     width:100%;
     height:100vh;
-    background-size: cover;
+    background-size: auto;
     background-position: center;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("1f7b8b80ada5f4aad486bfb416f1e54b.jpg");
 }
