--- a/back.html
+++ b/back.html
@@ -37,9 +37,9 @@ body {
     font-family: sans-serif;
     width:100%;
     height:100vh;
-    background-size: cover;
+    background-size:contain;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("3d-gym-equipment_23-2151114218.avif");
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("e0cc42632cdc792bb8e825f26fcec0b2.jpg");
 }
 
 
