--- a/bro split.html
+++ b/bro split.html
@@ -46,7 +46,7 @@ body {
     font-family: sans-serif;
     width:100%;
     height:100vh;
-    background-size: cover;
+    background-size:contain;
     background-position: center;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("equipment.jpg");
 }
