--- a/chest.html
+++ b/chest.html
@@ -37,7 +37,7 @@ body {
     font-family: sans-serif;
     width:100%;
     height:100vh;
-    background-size: cover;
+    background-size:contain;
     background-position: center;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("3d-gym-equipment_23-2151114218.avif");
 }
