--- a/legs3.html
+++ b/legs3.html
@@ -37,7 +37,7 @@ body {
     font-family: sans-serif;
     width:100%;
     height:100vh;
-    background-size: cover;
+    background-size: auto;
     background-position: center;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("a9172298e2fb63a933ad4899157bb961.jpg");
 }
