--- a/pull.html
+++ b/pull.html
@@ -40,9 +40,9 @@ body {
     font-family: sans-serif;
     width:100%;
     height:100vh;
-    background-size: cover;
+    background-size: auto;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("d69cb46c483804f236976d28a2922c7f.jpg");
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("93dc6d00535327c2232ff6b27e0106b7.jpg");
 }
 
 
