--- a/push.html
+++ b/push.html
@@ -40,7 +40,7 @@ body {
     font-family: sans-serif;
     width:100%;
     height:100vh;
-    background-size: cover;
+    background-size: auto;
     background-position: center;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("072c2ec9bbe161c3b244534c8e32a152.jpg");
 }
