--- a/Ali zain.html
+++ b/Ali zain.html
@@ -89,7 +89,7 @@ h1{
     <ul>
         <li><a href="https://malk1910.github.io/Ali-Zain.github.io/advice.html">Advice</a></li>
         <li><a href="./index.html">BMI calc</a></li>
-        
+        <li><a href="./bmr.html">BMR calc</a></li>
         <li><a href="./types.html">Exercises</a></li>
         <li><a href="./communication.html">Contact</a></li>
       </ul>
