--- a/types.html
+++ b/types.html
@@ -50,6 +50,9 @@ body {
     background-position: center;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("illustration-fitness-equipments-design-background_916191-39359.avif");
 }
+textarea{
+  resize:none;
+}
 
 
 
@@ -103,6 +106,13 @@ body {
           </div>
           </div>
           </div>
+
+      <textarea id="test">All Exercises: (10 x 3)
+            <br> Light weight : (12 x 3)<br>
+            Heavy weight : (8 x 3)<br>
+            Fullbody program : (10 x 3)
+          </textarea>
+
 
 
 
