--- a/abs.html
+++ b/abs.html
@@ -42,6 +42,12 @@ body {
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("www.jpg");
 }
 
+.logo{
+    width: 120px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
 
 
 
@@ -109,6 +115,7 @@ body {
           </div>
           
 
+          <img src="logo.png" class="logo">
 
 
     </body>
