--- a/chest.html
+++ b/chest.html
@@ -41,6 +41,11 @@ body {
     background-position: center;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("3d-gym-equipment_23-2151114218.avif");
 }
+.logo{
+    width: 120px;
+    cursor: pointer;
+    border-radius: 50%;
+}
 
 
 
@@ -105,7 +110,7 @@ body {
             من اهم تمارين الاطالة للعضلة الصدرية الكبرى كما انه يستهدف العضلة الغرابية العضدية والراس القصيرة لعضلة الترايسبس</div>
           </div>
           
-
+          <img src="logo.png" class="logo">
 
 
     </body>
