--- a/legs3.html
+++ b/legs3.html
@@ -42,6 +42,11 @@ body {
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("a9172298e2fb63a933ad4899157bb961.jpg");
 }
 
+.logo{
+    width: 120px;
+    cursor: pointer;
+    border-radius: 50%;
+}
 
 
 
@@ -123,6 +128,7 @@ body {
             </div>
           </div>
           
+          <img src="logo.png" class="logo">
 
 
 
