--- a/pull.html
+++ b/pull.html
@@ -44,6 +44,11 @@ body {
     background-position: center;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("93dc6d00535327c2232ff6b27e0106b7.jpg");
 }
+.logo{
+    width: 120px;
+    cursor: pointer;
+    border-radius: 50%;
+}
 
 
 
@@ -144,7 +149,7 @@ body {
 
 
 
-
+  <img src="logo.png" class="logo">
 
 
 
