--- a/push.html
+++ b/push.html
@@ -44,7 +44,11 @@ body {
     background-position: center;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("072c2ec9bbe161c3b244534c8e32a152.jpg");
 }
-
+.logo{
+    width: 120px;
+    cursor: pointer;
+    border-radius: 50%;
+}
 
 
 
@@ -159,7 +163,7 @@ body {
                 يستهدف الراس الطويله للتراي </div>
           </div>
 
-
+          <img src="logo.png" class="logo">
 
     </body>
 </html>
