--- a/upper.html
+++ b/upper.html
@@ -45,6 +45,12 @@ body {
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("1f7b8b80ada5f4aad486bfb416f1e54b.jpg");
 }
 
+.logo{
+    width: 120px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
 
 
 
@@ -153,6 +159,7 @@ body {
         يستهدف عضلة الراس الطويله والقصيره
             </div>
           </div>
+          <img src="logo.png" class="logo">
 
 
     </body>
