--- a/bitri.html
+++ b/bitri.html
@@ -42,6 +42,12 @@ body {
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("wallpaper\ 3.png");
 }
 
+.logo{
+    width: 120px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
 
 
 
@@ -139,7 +145,8 @@ body {
           </div>
 
 
-          
+          <img src="logo.png" class="logo">
+
 
 
 
