--- a/leg.html
+++ b/leg.html
@@ -41,6 +41,11 @@ body {
     background-position: center;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("w7.png");
 }
+.logo{
+    width: 120px;
+    cursor: pointer;
+    border-radius: 50%;
+}
 
 
 
@@ -123,6 +128,7 @@ body {
             </div>
           </div>
           
+          <img src="logo.png" class="logo">
 
 
 
