--- a/lower.html
+++ b/lower.html
@@ -42,6 +42,13 @@ body {
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("c9508552559a7c54b8b8d28f542ce251.jpg");
 }
 
+.logo{
+    width: 120px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+
 
 
 
@@ -123,7 +130,7 @@ body {
             </div>
           </div>
           
-
+          <img src="logo.png" class="logo">
 
 
     </body>
