--- a/shoulders.html
+++ b/shoulders.html
@@ -42,6 +42,12 @@ body {
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("wallpaper\ sh.png");
 }
 
+.logo{
+    width: 120px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
 
 
 
@@ -109,6 +115,7 @@ body {
             </div>
           </div>
           
+          <img src="logo.png" class="logo">
 
 
 
