--- a/back.html
+++ b/back.html
@@ -47,6 +47,9 @@ body {
     cursor: pointer;
     border-radius: 50%;
 }
+h1{
+  color: white;
+}
 
 
 
@@ -138,6 +141,90 @@ body {
                 يستهدف مجموعة العضلات الناصبة للعمود الفقري وعضلات الركبة 
         </div>
           </div>
+
+          <br clear="all"/>
+
+          <h1>Stretches</h1>
+
+          <div class="gallery">
+            <a target="_blank" href="7cd98c10-0ec6-4cc5-96da-5d75d9d917ab.jpg">
+              <img src="7cd98c10-0ec6-4cc5-96da-5d75d9d917ab.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+          <div class="gallery">
+            <a target="_blank" href="558f2373-5be9-4348-83a9-21186533bd91.jpg">
+              <img src="558f2373-5be9-4348-83a9-21186533bd91.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+          <div class="gallery">
+            <a target="_blank" href="b58d13a3-1704-4094-ab15-5f7ff7cdd7a1.jpg">
+              <img src="b58d13a3-1704-4094-ab15-5f7ff7cdd7a1.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+          
+
+          <div class="gallery">
+            <a target="_blank" href="c3816c67-d0b7-4a21-8b0a-7aa8ba033ab9.jpg">
+              <img src="c3816c67-d0b7-4a21-8b0a-7aa8ba033ab9.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+          <br clear="all"/>
+
+          <div class="gallery">
+            <a target="_blank" href="cfcafc4c-ca2b-4cce-9767-973ff5ca787d.jpg">
+              <img src="cfcafc4c-ca2b-4cce-9767-973ff5ca787d.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+          <div class="gallery">
+            <a target="_blank" href="dbc6ed73-69e6-40f0-8619-da1fc676ee30.jpg">
+              <img src="dbc6ed73-69e6-40f0-8619-da1fc676ee30.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+          <div class="gallery">
+            <a target="_blank" href="af1be898-a90e-4f01-b738-d373a3f68366.jpg">
+              <img src="af1be898-a90e-4f01-b738-d373a3f68366.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
           <img src="logo.png" class="logo">
