--- a/bitri.html
+++ b/bitri.html
@@ -47,7 +47,9 @@ body {
     cursor: pointer;
     border-radius: 50%;
 }
-
+h1{
+  color: white;
+}
 
 
 
@@ -143,6 +145,20 @@ body {
               
                 يستهدف الساعد</div>
           </div>
+
+          <br clear="all"/>
+
+          <h1>Stretches</h1>
+
+          <div class="gallery">
+            <a target="_blank" href="be2bfbf2-637b-45e3-b604-7cc9d8e6709c.jpg">
+              <img src="be2bfbf2-637b-45e3-b604-7cc9d8e6709c.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+
 
 
           <img src="logo.png" class="logo">
