--- a/leg.html
+++ b/leg.html
@@ -46,7 +46,9 @@ body {
     cursor: pointer;
     border-radius: 50%;
 }
-
+h1{
+  color: white;
+}
 
 
 
@@ -127,6 +129,36 @@ body {
 
             </div>
           </div>
+
+          <br clear="all"/>
+
+          <h1>Stretches</h1>
+
+          <div class="gallery">
+            <a target="_blank" href="7271fa67-9e6a-486e-98d6-512ab01a24be.jpg">
+              <img src="7271fa67-9e6a-486e-98d6-512ab01a24be.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+          <div class="gallery">
+            <a target="_blank" href="73016585-b183-454b-bb4f-e887e2d9d74e.jpg">
+              <img src="73016585-b183-454b-bb4f-e887e2d9d74e.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+          <div class="gallery">
+            <a target="_blank" href="0d94332e-0247-4a11-b576-17b254285ae6.jpg">
+              <img src="0d94332e-0247-4a11-b576-17b254285ae6.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+
           
           <img src="logo.png" class="logo">
 
