--- a/shoulders.html
+++ b/shoulders.html
@@ -47,7 +47,9 @@ body {
     cursor: pointer;
     border-radius: 50%;
 }
-
+h1{
+  color: white;
+}
 
 
 
@@ -112,6 +114,26 @@ body {
             <div class="desc"><h3>Rear delt fly machine</h3>
                 
                 يستهدف الداليه الخلفية والعضلة فوق الشوكة والعضلة المدورة الصغيرة 
+            </div>
+          </div>
+
+          <br clear="all"/>
+
+          <h1>stretches</h1>
+
+          <div class="gallery">
+            <a target="_blank" href="73cb18cd-8259-42cb-b4fb-91b4b1f44df9.jpg">
+              <img src="73cb18cd-8259-42cb-b4fb-91b4b1f44df9.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
+            </div>
+          </div>
+
+          <div class="gallery">
+            <a target="_blank" href="4fae380f-53ee-42d0-a51c-80a95c506d07.jpg">
+              <img src="4fae380f-53ee-42d0-a51c-80a95c506d07.jpg" alt="st" width="600" height="400">
+            </a>
+            <div class="desc"> <h3>Stretches</h3>
             </div>
           </div>
           
