--- a/types.html
+++ b/types.html
@@ -127,7 +127,7 @@ div3{
                 <br>
                 اذا كان الوزن ثقيل : 3 × 8
                 <br>
-                Fullbody program : 10 × 2<br>
+                Fullbody workout : 10 × 2<br>
               </p>
               
             </div3> 
