--- a/leg.html
+++ b/leg.html
@@ -39,7 +39,7 @@ body {
     height:100vh;
     background-size: auto;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("w7.png");
+    background-image: linear-gradient(90deg,rgb(49, 5, 41),rgb(176, 17, 115));
 }
 .logo{
     width: 120px;
