--- a/abs.html
+++ b/abs.html
@@ -39,7 +39,7 @@ body {
     height:100vh;
     background-size: auto;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("www.jpg");
+    background-image: linear-gradient(90deg,rgb(6, 57, 41),rgb(36, 215, 153));
 }
 
 .logo{
