--- a/back.html
+++ b/back.html
@@ -39,7 +39,7 @@ body {
     height:100vh;
     background-size:contain;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("e0cc42632cdc792bb8e825f26fcec0b2.jpg");
+    background-image: linear-gradient(90deg,black,orange);
 }
 
 .logo{
