--- a/bitri.html
+++ b/bitri.html
@@ -39,7 +39,7 @@ body {
     height:100vh;
     background-size: auto;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("wallpaper\ 3.png");
+    background-image: linear-gradient(90deg,rgb(7, 7, 54),rgb(57, 57, 230));
 }
 
 .logo{
