--- a/chest.html
+++ b/chest.html
@@ -39,7 +39,8 @@ body {
     height:100vh;
     background-size:contain;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("3d-gym-equipment_23-2151114218.avif");
+    background-image: linear-gradient(45deg,purple,blue);
+  
 }
 .logo{
     width: 120px;
