--- a/shoulders.html
+++ b/shoulders.html
@@ -39,8 +39,7 @@ body {
     height:100vh;
     background-size:auto;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("wallpaper\ sh.png");
-}
+    background-image: linear-gradient(90deg,black,red);}
 
 .logo{
     width: 120px;
