--- a/legs3.html
+++ b/legs3.html
@@ -39,7 +39,7 @@ body {
     height:100vh;
     background-size: auto;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("a9172298e2fb63a933ad4899157bb961.jpg");
+    background-image: linear-gradient(90deg,#d534eb,#9834eb,#5e34eb);
 }
 
 .logo{
