--- a/upper.html
+++ b/upper.html
@@ -42,7 +42,7 @@ body {
     height:100vh;
     background-size: auto;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("1f7b8b80ada5f4aad486bfb416f1e54b.jpg");
+    background-image: linear-gradient(90deg,#f70a0a,#f7790a,#f7c80a);
 }
 
 .logo{
