--- a/full body.html
+++ b/full body.html
@@ -42,8 +42,9 @@ body {
     height:100vh;
     background-size:auto;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("d.jpg");
-}
+    background-image: linear-gradient(90deg,rgb(6, 0, 4),rgb(255, 3, 104),rgb(240, 152, 210));
+
+  }
 
 .logo{
     width: 120px;
