--- a/lower.html
+++ b/lower.html
@@ -39,7 +39,7 @@ body {
     height:100vh;
     background-size: auto;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("c9508552559a7c54b8b8d28f542ce251.jpg");
+    background-image: linear-gradient(90deg,#2a0af7,#a40af7,#f70a94);
 }
 
 .logo{
