--- a/pull.html
+++ b/pull.html
@@ -42,7 +42,7 @@ body {
     height:100vh;
     background-size: auto;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("93dc6d00535327c2232ff6b27e0106b7.jpg");
+    background-image: linear-gradient(90deg,rgb(11, 65, 192),rgb(49, 194, 247));
 }
 .logo{
     width: 120px;
