--- a/push.html
+++ b/push.html
@@ -42,7 +42,7 @@ body {
     height:100vh;
     background-size: auto;
     background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("072c2ec9bbe161c3b244534c8e32a152.jpg");
+    background-image: linear-gradient(90deg,rgb(245, 107, 15),rgb(248, 3, 3));
 }
 .logo{
     width: 120px;
