--- a/Ali zain.html
+++ b/Ali zain.html
@@ -80,6 +80,8 @@ h1{
     text-shadow: 5px 5px 7px orange;
 }
 
+
+
 </style>
 </head>
 <body>
@@ -113,8 +115,9 @@ h1{
 </p>
 
 </div>
-<p1><img src="./images.png" alt="HTML tutorial" 
-            style="width:300px;height:300px;float:right;border-radius: 8px;"></p1>
+<p1><img src="e35c2df8-c634-4778-a2bd-3da708457a67.jpg" alt="HTML tutorial" 
+            style="width:300px;height:300px;float:right;border-radius: 8px; box-shadow: 6px 6px 60px 20px rgba(244, 139, 2, 0.5);
+            "></p1>
 
 
 
